Update CDN link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
         <a class="down-link" href="#section-one" id="anchor1">VIEW IMAGE REEL
-            <img src="/SK_Images/Arrow_3.svg" alt="Downward Arrow">
+            <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_3_ej4yeq.svg" alt="Downward Arrow">
         </a>
     </section>
     
