--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
         </div>
             <a class="down-link two" href="#section-three" id="anchor1">ABOUT
-                <img src="/SK_Images/Arrow_4.svg" alt="Downward Arrow">
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_4_qdl9bo.svg" alt="Downward Arrow">
             </a> 
     </section>
 
@@ -420,7 +420,7 @@
             <img src="/SK_Images/GettyImages-903115300.png" alt="The Moon">
         </div>
         <a class="down-link" href="#section-four" id="anchor1">
-            <img src="/SK_Images/Arrow_3.svg" alt="Downward Arrow">
+            <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_3_ej4yeq.svg" alt="Downward Arrow">
         </a>
     </section>
 
