--- a/index.html
+++ b/index.html
@@ -298,15 +298,15 @@
           
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">
-                <img src="SK_Images/Arrow_2.svg" alt="Left Arrow">
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_2_qk3ekp.svg" alt="Left Arrow">
             </a>
             <a class="next" onclick="plusSlides(1)">
-                <img src="SK_Images/Arrow.svg" alt="Right Arrow">
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_njbgzs.svg" alt="Right Arrow">
             </a>
           </div>
         
           <a class="down-link" href="#section-two" id="anchor1">SEE OUR WORK
-            <img src="/SK_Images/Arrow_3.svg" alt="Downward Arrow">
+            <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_3_ej4yeq.svg" alt="Downward Arrow">
         </a>
     </section>
 
@@ -417,7 +417,7 @@
     <section name="section-three" id="section-three">
         <h1>ABOUT US</h1>
         <div>
-            <img src="/SK_Images/GettyImages-903115300.png" alt="The Moon">
+            <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639572921/GettyImages-903115300_waoutr.png" alt="The Moon">
         </div>
         <a class="down-link" href="#section-four" id="anchor1">
             <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_3_ej4yeq.svg" alt="Downward Arrow">
