--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <!-- Full-width images with number and caption text -->
             <div class="mySlides">
               <!-- <div class="numbertext">1 / 3</div> -->
-              <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066292/DJI_0366_g2gvun.jpg" >
+              <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066292/Overview/DJI_0366_g2gvun.jpg" >
               <div class="text">Enter Text</div>
             </div>
           
