--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             </div>
         </div>
         <a class="down-link" href="#section-five" id="anchor1">CONTACT
-            <img src="/SK_Images/Arrow_4.svg" alt="Downward Arrow">
+            <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_4_qdl9bo.svg" alt="Downward Arrow">
         </a>
     </section>
 
