--- a/index.html
+++ b/index.html
@@ -80,61 +80,61 @@
           
             <div class="mySlides">
               <!-- <div class="numbertext">2 / 3</div> -->
-              <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066291/_MG_9098_fg00ji.jpg" >
+              <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066291/Overview/_MG_9098_fg00ji.jpg" >
               <div class="text">Enter Text</div>
             </div>
           
             <div class="mySlides">
               <!-- <div class="numbertext">3 / 3</div> -->
-              <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066291/DJI_0744_hgydrx.jpg" >
+              <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066291/Overview/DJI_0744_hgydrx.jpg" >
               <div class="text">Enter Text</div>
             </div>
 
             <div class="mySlides">
                 <!-- <div class="numbertext">3 / 3</div> -->
-                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066290/_MG_3645_ipfk1s.jpg" >
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066290/Overview/_MG_3645_ipfk1s.jpg" >
                 <div class="text">Enter Text</div>
               </div>
 
               <div class="mySlides">
                 <!-- <div class="numbertext">3 / 3</div> -->
-                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066291/DJI_0100_traisp.jpg" >
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066291/Overview/DJI_0100_traisp.jpg" >
                 <div class="text">Enter Text</div>
             </div>
 
             <div class="mySlides">
                 <!-- <div class="numbertext">3 / 3</div> -->
-                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066290/DJI_0063_copy_sstczh.jpg" >
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066290/Overview/DJI_0063_copy_sstczh.jpg" >
                 <div class="text">Enter Text</div>
             </div>
 
             <div class="mySlides">
                 <!-- <div class="numbertext">3 / 3</div> -->
-                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066288/ADAM_SLAMA_PRINT_SELECTS-1_lft9g5.jpg" >
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066288/Overview/ADAM_SLAMA_PRINT_SELECTS-1_lft9g5.jpg" >
                 <div class="text">Enter Text</div>
             </div>
 
             <div class="mySlides">
                 <!-- <div class="numbertext">3 / 3</div> -->
-                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066287/_MG_9687-Edit_q7tv7u.jpg" >
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066287/Overview/_MG_9687-Edit_q7tv7u.jpg" >
                 <div class="text">Enter Text</div>
             </div>
 
             <div class="mySlides">
                 <!-- <div class="numbertext">3 / 3</div> -->
-                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066287/_OA_9673_ytuqne.jpg" >
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066287/Overview/_OA_9673_ytuqne.jpg" >
                 <div class="text">Enter Text</div>
             </div>
 
             <div class="mySlides">
                 <!-- <div class="numbertext">3 / 3</div> -->
-                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066286/_MG_9662_wmtbqw.jpg" >
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066286/Overview/_MG_9662_wmtbqw.jpg" >
                 <div class="text">Enter Text</div>
             </div>
 
             <div class="mySlides">
                 <!-- <div class="numbertext">3 / 3</div> -->
-                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639066286/_MG_6707-Edit_vfxgl7.jpg" >
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066286/Overview/_MG_6707-Edit_vfxgl7.jpg" >
                 <div class="text">Enter Text</div>
             </div>
 
