--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
     <section name="section-five" id="section-five">
         <div class="half-page contact">
             <div>
-                <img src="/SK_Images/Studio Khonsu Thin White.svg" alt="">
+                <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonsu_Thin_White_r04rjj.svg" alt="">
             </div>
             <p>
             LONDON HQ
@@ -549,7 +549,7 @@
         </div>
 
         <div class="half-page">
-            <img class="contact-img" src="/SK_Images/DJI_0780.jpeg" alt="">
+            <img class="contact-img" src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639575028/DJI_0780_nitmwp.jpg" alt="">
         </div>
     </section>
     
