--- a/case_studies/necker-island.html
+++ b/case_studies/necker-island.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./normalize.css" />
-    <link rel="stylesheet" href="./case-study.css" />
-    <link rel="stylesheet" href="./menu.css" />
+    <link rel="stylesheet" href="../normalize.css" />
+    <link rel="stylesheet" href="../case-study.css" />
+    <link rel="stylesheet" href="../menu.css" />
     <title>Virgin Limited Edition</title>
 </head>
 <body>
@@ -263,12 +263,12 @@
       </div>
     </footer>
 
-    <script src="./jquery.js"></script>
+    <script src="../jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="./selector.js"></script>
-    <script src="./scroll.js"></script>
-    <script src="./slideshow-multiple.js"></script>
-    <script src="./menu.js"></script>
+    <script src="../selector.js"></script>
+    <script src="../scroll.js"></script>
+    <script src="../slideshow-multiple.js"></script>
+    <script src="../menu.js"></script>
   
 </body>
 </html>
