--- a/case_studies/necker-island.html
+++ b/case_studies/necker-island.html
@@ -13,7 +13,7 @@
   <header>
     <div id="myNav" class="menu-btn">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
-            <img src="/SK_Images/Menu_close.svg" alt="Close Menu"> 
+            <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Menu_close_eg7yjm.svg" alt="Close Menu"> 
         </a>
         <div class="menu-content">
             <div class="background-color"></div>
@@ -29,14 +29,14 @@
 
     <nav>
         <div style="cursor:pointer" onclick="openNav()">
-            <img src="/SK_Images/Menu_1.svg" alt="Open Menu">
+            <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Menu_1_cjepe2.svg" alt="Open Menu">
         
         </div>
         <a href="" class="desktop-logo">
-            <img src="./SK_Images/Studio Khonso Logo Reg Long White.svg" alt="Studio Khonsu Logo">
+            <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonso_Logo_Reg_Long_White_msycd1.svg" alt="Studio Khonsu Logo">
         </a>
         <a href="" class="mobile-logo">
-            <img src="./SK_Images/Studio Khonsu Thick White Stacked.svg" alt="Studio Khonsu Logo">
+            <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonsu_Thick_White_Stacked_jnxatu.svg" alt="Studio Khonsu Logo">
         </a>
 
         <div></div>
