--- a/case_studies/amazon-river.html
+++ b/case_studies/amazon-river.html
@@ -58,7 +58,7 @@
           <h4>CONTENT, PHOTOGRAPHY, VIDEO, PRINT</h4>
             <div class="three-column">
                 <div class="small-line">
-                    <img src="/SK_Images/Line_1.svg" alt="">
+                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Line_1_gsy8m5.svg" alt="">
                 </div>
                 <p>An expedition led by Doug Stoup, one of the leading polar explorers alive today. This trip embarks on the exploration of the Amazon River and many of its tributaries, discovering its various cultures, flora and fauna. Home to nearly a third of all of the world’s species and many diverse and beautiful cultures, this expedition is a yearly favourite for Stonesthrow to collaborate with Ice Axe on.</p>
                 <p>We were hired by Doug and the Ice Axe team to document this once in a lifetime adventure. The content captured not only for marketing purposes however much of it being used for scientific and educational purposes.</p>
