--- a/case_studies/sri_lanka.html
+++ b/case_studies/sri_lanka.html
@@ -68,7 +68,7 @@
             <h4>CONTENT, PHOTOGRAPHY, VIDEO, PRINT</h4>
             <div class="three-column">
                 <div class="small-line">
-                    <img src="/SK_Images/Line_1.svg" alt="">
+                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Line_1_gsy8m5.svg" alt="">
                 </div>
                 <p>A story following the production of organic tea in Sri Lanka. The English Tea Shop is an English tea company who produce all of their tea in Sri Lanka, using organic farming techniques, employing local communities to cultivate the tea every step of the way. From Seed To Cup.
                 <br><br>  
