--- a/case_studies/tequila.html
+++ b/case_studies/tequila.html
@@ -68,7 +68,7 @@
             <h4>CONTENT, PHOTOGRAPHY, VIDEO, PRINT</h4>
             <div class="three-column">
                 <div class="small-line">
-                    <img src="/SK_Images/Line_1.svg" alt="">
+                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Line_1_gsy8m5.svg" alt="">
                 </div>
                 <p>A photo story produced for Relais & Châteaux to promote their property in Tequila, Mexico.
                   <br><br>
