--- a/case_studies/the_alps_2018.html
+++ b/case_studies/the_alps_2018.html
@@ -67,7 +67,7 @@
             <h4>CONTENT, PHOTOGRAPHY, VIDEO, PRINT</h4>
             <div class="three-column">
                 <div class="small-line">
-                    <img src="/SK_Images/Line_1.svg" alt="">
+                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Line_1_gsy8m5.svg" alt="">
                 </div>
                 <p>Virgin Limited Edition came to us in need of some revitalisation in their imagery. They felt they needed something more current, slick and appealing. With a wealth of experience in capturing those real life moments, bringing the atmosphere of a time and place to life, we were invited in to give Neckar and Moskito Island a breath of fresh air with our world leading imagery.</p>
                 <p>Under guidance from the client and our own knowledge on how to capture the look and feel they were going for. We used only natural light for this project. Along with our photographer’s keen eye for the barefoot luxury moments, this made for a well executed brief and more. Leaving the client with more content than expected as well it being to a standard and look they were so eager to achieve.</p>
