--- a/case_studies/tsavo.html
+++ b/case_studies/tsavo.html
@@ -57,7 +57,7 @@
     <section>
         <div class="opening-block">
             <h1>ICE<br>AXE<br>EXPEDITIONS</h1>
-            <a class="down-link" href="#section-one" id="anchor1">VIEW PROJECT<img src="/SK_Images/Arrow_3.svg" alt=""></a>
+            <a class="down-link" href="#section-one" id="anchor1">VIEW PROJECT<img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_3_ej4yeq.svg" alt=""></a>
         </div>
     </section>
     <section name="section-one" id="section-one"> 
