--- a/case_studies/sri_lanka.html
+++ b/case_studies/sri_lanka.html
@@ -58,7 +58,7 @@
     <section>
         <div class="opening-block tea">
             <h1>English <br>Tea Shop</h1>
-            <a class="down-link" href="#section-one" id="anchor1">VIEW PROJECT<img src="/SK_Images/Arrow_3.svg" alt=""></a>
+            <a class="down-link" href="#section-one" id="anchor1">VIEW PROJECT<img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_3_ej4yeq.svg" alt=""></a>
         </div>
     </section>
     <section name="section-one" id="section-one"> 
