--- a/case_studies/amazon-river.html
+++ b/case_studies/amazon-river.html
@@ -33,10 +33,10 @@
             <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Menu_1_cjepe2.svg" alt="Open Menu">
         
         </div>
-        <a href="" class="desktop-logo">
+        <a href="../index.html" class="desktop-logo">
             <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonso_Logo_Reg_Long_White_msycd1.svg" alt="Studio Khonsu Logo">
         </a>
-        <a href="" class="mobile-logo">
+        <a href="../index.html" class="mobile-logo">
             <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonsu_Thick_White_Stacked_jnxatu.svg" alt="Studio Khonsu Logo">
         </a>
 
