--- a/case_studies/tequila.html
+++ b/case_studies/tequila.html
@@ -19,11 +19,11 @@
         <div class="menu-content">
             <div class="background-color"></div>
             <div class="menu-links">
-              <a href="../index.html">HOME</a>
-              <a href="../index.html#section-one" onclick="closeNav()">IMAGE REEL</a>
-              <a href="../index.html#section-two" onclick="closeNav()">OUR WORK</a>
-              <a href="../index.html#section-three" onclick="closeNav()">ABOUT</a>
-              <a href="../index.html#section-five" onclick="closeNav()">CONTACT</a>
+                <a href="../index.html">HOME</a>
+                <a href="../index.html#section-one" onclick="closeNav()">IMAGE REEL</a>
+                <a href="../index.html#section-two" onclick="closeNav()">OUR WORK</a>
+                <a href="../index.html#section-three" onclick="closeNav()">ABOUT</a>
+                <a href="../index.html#section-five" onclick="closeNav()">CONTACT</a>
             </div>
         </div>
       </div>
@@ -33,25 +33,15 @@
             <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Menu_1_cjepe2.svg" alt="Open Menu">
         
         </div>
-        <a href="" class="desktop-logo">
+        <a href="../index.html" class="desktop-logo">
             <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonso_Logo_Reg_Long_White_msycd1.svg" alt="Studio Khonsu Logo">
         </a>
-        <a href="" class="mobile-logo">
+        <a href="../index.html" class="mobile-logo">
             <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonsu_Thick_White_Stacked_jnxatu.svg" alt="Studio Khonsu Logo">
         </a>
 
         <div></div>
     </nav>
-
-    <!-- <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="overlay-content">
-          <a href="#">About</a>
-          <a href="#">Services</a>
-          <a href="#">Clients</a>
-          <a href="#">Contact</a>
-        </div>
-      </div> -->
       
 </header>
 <main>
