--- a/case_studies/amazon-river.html
+++ b/case_studies/amazon-river.html
@@ -149,7 +149,7 @@
         <div class="grid-wrapper">
             <div class="three-column">
               <h6></h6>
-              <p>MThe Amazon Rainforest, one of the most important ecosystems on earth. As the largest tropical rainforest in the world it plays such an important part in maintaining the planets temperature. Commonly mistaken for the ‘lungs of the Earth’ due to the large amount of oxygen produced, evidence now suggests rainforests don’t have much effect on the world’s oxygen supply due to the decomposition of dead plant matter.</p>
+              <p>The Amazon Rainforest, one of the most important ecosystems on earth. As the largest tropical rainforest in the world it plays such an important part in maintaining the planets temperature. Commonly mistaken for the ‘lungs of the Earth’ due to the large amount of oxygen produced, evidence now suggests rainforests don’t have much effect on the world’s oxygen supply due to the decomposition of dead plant matter.</p>
               <p>This consumes around the same amount of oxygen as the living plants produce. However these forests still plays a major role in the global ecosystem. They are now referred to as the ‘air conditioners of the Earth’ due to their dark shades absorbing heat from the sun, ultimately playing a key role in regulating global temperature.</p>
             </div>
         </div>
@@ -166,11 +166,11 @@
     <footer>
       <div>
         <p>ICE AXE EXPEDITIONS</p>
-        <a class="all-projects-link" href="">ALL PROJECTS</a>
+        <a class="all-projects-link" href="../index.html">ALL PROJECTS</a>
       </div>
 <div>    
-        <a href="">PREVIOUS</a>
-        <a href="">NEXT</a>
+        <a href="./case_studies/necker-island.html">PREVIOUS</a>
+        <a href="./case_studies/sri_lanka.html">NEXT</a>
       </div>
     </footer>
 
