--- a/index.html
+++ b/index.html
@@ -314,14 +314,14 @@
         <div class="horizontal-scroll" id="ct">
             
             <div class="a">
-                <a href="../case_studies/necker-island.html">
+                <a href="./case_studies/necker-island.html">
                     <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639068895/Necker%20island%20LR/DJI_0718_mllpd8.jpg" alt="">
                     <p>NECKER ISLAND<br>VIRGIN LIMITED EDITION</p>
                 </a>
             </div>
             
             <div class="a">    
-                <a href="../case_studies/tequila.html">
+                <a href="./case_studies/tequila.html">
                     <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639068843/Mexico%20LR/_MG_4605-web_fzstd6.jpg" alt="">
                     <p>TEQUILA, MEXICO<br>RELAIS & CHATEAUX</p>
                 </a>
