--- a/case_studies/sri_lanka.html
+++ b/case_studies/sri_lanka.html
@@ -180,7 +180,7 @@
     <footer>
       <div>
         <p>ENGLISH TEA SHOP</p>
-        <a class="all-projects-link" href="">ALL PROJECTS</a>
+        <a class="all-projects-link" href="../index.html">ALL PROJECTS</a>
       </div>
 <div>    
         <a href="">PREVIOUS</a>
