--- a/case_studies/amazon-river.html
+++ b/case_studies/amazon-river.html
@@ -169,8 +169,8 @@
         <a class="all-projects-link" href="../index.html">ALL PROJECTS</a>
       </div>
 <div>    
-        <a href="./case_studies/necker-island.html">PREVIOUS</a>
-        <a href="./case_studies/sri_lanka.html">NEXT</a>
+        <a href="/case_studies/necker-island.html">PREVIOUS</a>
+        <a href="/case_studies/sri_lanka.html">NEXT</a>
       </div>
     </footer>
 
