--- a/case_studies/amazon-river.html
+++ b/case_studies/amazon-river.html
@@ -166,11 +166,11 @@
     <footer>
       <div>
         <p>ICE AXE EXPEDITIONS</p>
-        <a class="all-projects-link" href="../index.html">ALL PROJECTS</a>
+        <a class="all-projects-link" href="../index.html#section-two">ALL PROJECTS</a>
       </div>
 <div>    
-        <a href="/case_studies/necker-island.html">PREVIOUS</a>
-        <a href="/case_studies/sri_lanka.html">NEXT</a>
+        <a href="../case_studies/necker-island.html">PREVIOUS</a>
+        <a href="../case_studies/sri_lanka.html">NEXT</a>
       </div>
     </footer>
 
