--- a/case_studies/tequila.html
+++ b/case_studies/tequila.html
@@ -162,11 +162,11 @@
     <footer>
       <div>
         <p>RELAIS & CHÂTEAUX</p>
-        <a class="all-projects-link" href="../index.html">ALL PROJECTS</a>
+        <a class="all-projects-link" href="../index.html#section-three">ALL PROJECTS</a>
       </div>
 <div>    
-        <a href="">PREVIOUS</a>
-        <a href="">NEXT</a>
+        <a href="../case_studies/the_alps_2016.html">PREVIOUS</a>
+        <a href="../case_studies/morocco_challenge.html">NEXT</a>
       </div>
     </footer>
 
