--- a/case_studies/morocco_challenge.html
+++ b/case_studies/morocco_challenge.html
@@ -245,11 +245,11 @@
     <footer>
       <div>
         <p>VIRGIN LIMITED EDITION</p>
-        <a class="all-projects-link" href="../index.html">ALL PROJECTS</a>
+        <a class="all-projects-link" href="../index.html#section-three">ALL PROJECTS</a>
       </div>
 <div>    
-        <a href="">PREVIOUS</a>
-        <a href="">NEXT</a>
+        <a href="../case_studies/tequila.html">PREVIOUS</a>
+        <a href="../case_studies/tsavo.html">NEXT</a>
       </div>
     </footer>
 
