--- a/case_studies/necker-island.html
+++ b/case_studies/necker-island.html
@@ -258,8 +258,8 @@
         <a class="all-projects-link" href="">ALL PROJECTS</a>
       </div>
 <div>    
-        <a href="">PREVIOUS</a>
-        <a href="">NEXT</a>
+        <a href="../case_studies/the_alps_2018.html">PREVIOUS</a>
+        <a href="../case_studies/amazon-river.html">NEXT</a>
       </div>
     </footer>
 
