--- a/case_studies/amazon-river.html
+++ b/case_studies/amazon-river.html
@@ -166,7 +166,7 @@
     <footer>
       <div>
         <p>ICE AXE EXPEDITIONS</p>
-        <a class="all-projects-link" href="../index.html#section-three">ALL PROJECTS</a>
+        <a class="all-projects-link" href="../index.html#section-two">ALL PROJECTS</a>
       </div>
 <div>    
         <a href="../case_studies/necker-island.html">PREVIOUS</a>
