--- a/case_studies/tequila.html
+++ b/case_studies/tequila.html
@@ -162,7 +162,7 @@
     <footer>
       <div>
         <p>RELAIS & CHÂTEAUX</p>
-        <a class="all-projects-link" href="../index.html#section-three">ALL PROJECTS</a>
+        <a class="all-projects-link" href="../index.html#section-two">ALL PROJECTS</a>
       </div>
 <div>    
         <a href="../case_studies/the_alps_2016.html">PREVIOUS</a>
