--- a/case_studies/tsavo.html
+++ b/case_studies/tsavo.html
@@ -245,7 +245,7 @@
     <footer>
       <div>
         <p>VIRGIN LIMITED EDITION</p>
-        <a class="all-projects-link" href="../index.html#section-three">ALL PROJECTS</a>
+        <a class="all-projects-link" href="../index.html#section-two">ALL PROJECTS</a>
       </div>
 <div>    
         <a href="../case_studies/morocco_challenge.html">PREVIOUS</a>
