--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Section Home -->
     
     <section>
-        <h1>TRAVEL, <br> CULTURE & <br>EXPLORATION</h1>
+        <h1>TRAVEL, <br> CULTURE & <br>EXPLORATION.</h1>
         <div class="opening-video">
             <iframe src="https://player.vimeo.com/video/656565688?autoplay=1&loop=1&autopause=0&background=1&color=ffffff&controls=0&portrait=0" 
             frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
