--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Section Home -->
     
     <section>
-        <h1>TRAVEL, <br> CULTURE & <br>EXPLORATION.</h1>
+        <h1>TRAVEL, <br> CULTURE & <br>EXPLORATION</h1>
         <div class="opening-video">
             <iframe src="https://player.vimeo.com/video/656565688?autoplay=1&loop=1&autopause=0&background=1&color=ffffff&controls=0&portrait=0" 
             frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -418,7 +418,7 @@
                     WE UNDERSTAND TRAVEL, CULTURE & EXPLORATION. 
                 </h3>
                 <div>
-                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonso_Logo_Reg_Long_White_msycd1.svg" alt="Studio Khonsu Wordmark">
+                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonso_Logo_Reg_Long_Blue_2x_xyxem9.png" alt="Studio Khonsu Wordmark">
                 </div>
                 <div class="scrolling-h">
                     <div class="scrolling-h-inside">
