section 3 height fix

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                     <p>
                         As the moon deity and the main light in the darkness, Khonsu was believed to look after travellers and was often invoked to aid with healing, virility and protection from the elements. 
                         <br><br>
-                        At studio Khonsu we take a holistic approach in making sure our clients are looked after and in safe hands from our first interaction to the end product.  
+                        At Studio Khonsu we take a holistic approach in making sure our clients are looked after and in safe hands from our first interaction to the end product.  
                     </p>
                 </div>
             </div>
