Peter and Adam Updates

--- a/index.html
+++ b/index.html
@@ -530,8 +530,15 @@
             <br>
             CONTACT
             <br>
-            <a href="mailto:hello@studiokhonsu.com">hello@studiokhonsu.com </a>  
+            <a href="mailto:hello@studiokhonsu.com">hello@studiokhonsu.com </a>
+            <br>
+            <br>  
+            <a class="instagram" href="">
+                <img class="instagram-img" src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Insta_svg_gzgymp.svg" alt="">
+                FOLLOW US
+            </a>
             </p>
+            
             <!-- <form action="https://formspree.io/f/xknkejwo" method="POST">
                 <label>
                     <input type="text" placeholder="NAME">
@@ -550,6 +557,7 @@
                 </label>
                 <button type="submit">Submit</button>
             </form> -->
+            <p class="copyright-footer">© 2021 Khonsu Travel Media</p>
         </div>
 
         <div class="half-page">
