Peter and Adams Update

--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
     <!-- Section Home -->
     <section>
         <h1>TRAVEL, <br> CULTURE & <br>EXPLORATION</h1>
-        <div class="opening-video">
-            <iframe src="https://player.vimeo.com/video/656565688?autoplay=1&loop=1&autopause=0&background=1&color=ffffff&controls=0&portrait=0" 
-            frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
+        <video autoplay muted loop id="myVideo">
+            <source src="https://res.cloudinary.com/dtmlnugky/video/upload/v1641204182/Studio_Khonsu_2_th2dxr.mp4" type="video/mp4">
+        </video>
         <a class="down-link" href="#section-one" id="anchor1">VIEW IMAGE REEL
             <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_3_ej4yeq.svg" alt="Downward Arrow">
         </a>
