--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
                 <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494449/Menu_close_eg7yjm.svg" alt="Close Menu"> 
             </a>
-            <div class="menu-content">
+            <section class="menu-content">
                 <div class="background-color"></div>
                 <div class="menu-links">
                     <a href="/index.html">HOME</a>
@@ -26,7 +26,7 @@
                 </div>
                 <p>WE ARE A CREATIVE CONTENT, BRAND AND STRATEGY STUDIO</p>
 
-            </div>
+            </section>
 
           </div>
     
@@ -50,7 +50,7 @@
     <!-- Section Home -->
     <section>
         <h1>TRAVEL, <br> CULTURE & <br>EXPLORATION</h1>
-        <video autoplay muted loop id="myVideo">
+        <video autoplay muted loop playsinline id="myVideo">
             <source src="https://res.cloudinary.com/dtmlnugky/video/upload/v1641204182/Studio_Khonsu_2_th2dxr.mp4" type="video/mp4">
         </video>
         <a class="down-link" href="#section-one" id="anchor1">VIEW IMAGE REEL
