Adam and Peter Update

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
      <!-- Section 4 -->
 
-    <section name="section-three" id="section-three">
+    <section name="section-three" id="section-three" class="section_about">
         <h1>ABOUT US</h1>
         <div>
             <img class="background-image" src="https://res.cloudinary.com/dtmlnugky/image/upload/v1641397538/Khonsu-About-header-background_icrmzi.jpg" alt="The Moon">
@@ -418,11 +418,11 @@
                 <div>
                     <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494455/Studio_Khonso_Logo_Reg_Long_Blue_2x_xyxem9.png" alt="Studio Khonsu Wordmark">
                 </div>
-                <div class="gradient-border">
-
-                    <div class="scroll">
-
-                        <h4>
+                    <div class="scroll-container">
+                        <div class="gradient-border"></div>
+                        <div class="scroll">
+                            <h4>
+                            <br>
                             <br>
                             CREATES TRAVEL CONTENT<br>
                             CREATES INNOVATING IDEAS<br>
@@ -434,10 +434,9 @@
                             DESIGN & MAKE LOGOS<br> 
                             CREATE BROCHURES & BOOKS<br>
                             CAPTURES THE BOND BETWEEN TRAVEL & CULTURE. 
-                        </h4>
-
-                    </div>
-                </div>
+                            </h4>
+                        </div>
+                    </div>        
                 <h3>
                     WE ARE A CREATIVE CONTENT, BRAND AND STRATEGY STUDIO. 
                 </h3>
