--- a/case_studies/necker-island.html
+++ b/case_studies/necker-island.html
@@ -278,7 +278,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="../selector.js"></script>
     <script src="../scroll.js"></script>
-    <script src="../slideshow_2.js"></script>
+    <script src="../slideshow_not_automatic.js"></script>
     <script src="../menu.js"></script>
   
 </body>
