Peter and Adam corrections

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             <div class="mySlides1">
               <!-- <div class="numbertext">1 / 3</div> -->
               <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066292/Overview/DJI_0366_g2gvun.jpg" >
-              <div class="text">Enter Text</div>
+              <div class="text">Moskito Island, British Virgin Islands</div>
             </div>
           
             <div class="mySlides1">
               <!-- <div class="numbertext">2 / 3</div> -->
               <img src="https://res.cloudinary.com/dtmlnugky/image/upload/c_scale,w_2300/v1639066291/Overview/_MG_9098_fg00ji.jpg" >
-              <div class="text">Enter Text</div>
+              <div class="text">Andros Island, Bahamas</div>
             </div>
           
             <div class="mySlides1">
