--- a/case_studies/sri_lanka.html
+++ b/case_studies/sri_lanka.html
@@ -135,14 +135,13 @@
                 
                   <!-- Next and previous buttons -->
                 <a class="prev" onclick="plusSlides(-1)">
-                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_2_qk3ekp.svg" alt="Left Arrow">
+                    <img src="" alt="">
                 </a>
                 <a class="next" onclick="plusSlides(1)">
-                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_njbgzs.svg" alt="Right Arrow">
+                    <img src="" alt="">
                 </a>
                 </div>
                 <br>
-                <h5>• PHOTOGRAPHY • ENGLISH TEA SHOP •</h5>
 
           </div>
         </div>
@@ -160,7 +159,6 @@
         <div class="photo-slider-block-2">
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/392481238?h=e0637ca3f6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="From Seed To Cup; A Journey Into The Organic Tea Production In Sri Lanka"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             <br>
-                <h8>• VIDEO • ENGLISH TEA SHOP •</h8>
         </div>
 
         <!-- Bit of text in 3 columns -->
