--- a/case_studies/tequila.html
+++ b/case_studies/tequila.html
@@ -135,15 +135,13 @@
                 
                   <!-- Next and previous buttons -->
                 <a class="prev" onclick="plusSlides(-1)">
-                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_2_qk3ekp.svg" alt="Left Arrow">
+                    <img src="" alt="">
                 </a>
                 <a class="next" onclick="plusSlides(1)">
-                    <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639494436/Arrow_njbgzs.svg" alt="Right Arrow">
+                    <img src="" alt="">
                 </a>
                 </div>
                 <br>
-                <h5>• PHOTOGRAPHY • RELAIS & CHÂTEAUX •</h5>
-
           </div>
         </div>
 
