--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <a href="./case_studies/the_alps_2019.html">
                     <img src="https://res.cloudinary.com/dtmlnugky/image/upload/v1639069004/Strive%202019%20LR/_MG_2436_rysnxs.jpg" alt="The Alps">
                     <p>THE ALPS, EUROPE</p>
-                    <p>VIRGIN STRIVE</p>auto scr
+                    <p>VIRGIN STRIVE</p>
                 </a>
             </div>
 
